game area size increased; cross brwoser testing

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
                </div>
             </div>
             <div id='creditsBox' style='display:none'>
-                This software is released under GNU GPL v3. <a href='License.txt' target='_blank' >Click here</a> to know your rights. All works are licensed under <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">Creative Commons Attribution 3.0 Unported License.</a> <br /> <br/><b>Programmers:</b> <br/> <a href="http://saiy2k.blogspot.com" target="_blank">Saiyasodharan</a>, <a href="http://www.facebook.com/sankarganesh86" target="_blank">Sankar Ganeshi</a>, <a href="http://www.facebook.com/kevin.skyba" target="_blank">Kevin</a>. <br/><br/><b>Links</b><br/><a href="http://gethugames.in/blog" target="_blank">Official Blog</a> <br/> <a href="https://github.com/saiy2k/Number-Maze" target="_blank"> Source Code </a> <br /> <br />
+                This software is released under GNU GPL v3. <a href='License.txt' target='_blank' >Click here</a> to know your rights. All works are licensed under <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">Creative Commons Attribution 3.0 Unported License.</a> <br /> <br/><b>Programmers:</b> <br/> <a href="http://saiy2k.blogspot.com" target="_blank">Saiyasodharan</a>, <a href="http://www.facebook.com/sankarganesh86" target="_blank">Sankar Ganesh</a>, <a href="http://www.facebook.com/kevin.skyba" target="_blank">Kevin</a>. <br/><br/><b>Links</b><br/><a href="http://gethugames.in/blog" target="_blank">Official Blog</a> <br/> <a href="https://github.com/saiy2k/Number-Maze" target="_blank"> Source Code </a> <br /> <br />
                 <b>Graphics </b>
                 <a href="http://29a.ch/" target='_blank'>Jonas Wagner</a>, 
                 <a href='http://opengameart.org/content/asteroid-rotating' target='_blank'>dczanik</a>, 
@@ -108,6 +108,7 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
             if (typeof jQuery == 'undefined') { document.write(unescape("%3Cscript src='libs/jquery.js' type='text/javascript'%3E%3C/script%3E")); }
         </script>
 
+<!--
 		<script language='javascript' src='scripts/soundmanager2.js'></script>
         <script language='javascript' src='scripts/NumberMaze.js'></script>
 		<script language='javascript' src='scripts/AssetManager.js'></script>
@@ -136,10 +137,10 @@ along with Number Maze.  If not, see <http://www.gnu.org/licenses/>.
         <script language='javascript' src='scripts/MenuButton.js'></script>
 		<script language='javascript' src='scripts/PracticeGame.js'></script>
 		<script language='javascript' src='scripts/PractiseFail.js'></script>
-        <!--
-		<script language='javascript' src='scripts/min.js'></script>
         -->
-		
+
+		<script language='javascript' src='scripts/min.js'></script>
+
         <script>
             Math.dist = function (p1, p2) { return Math.sqrt((p2.x - p1.x) * (p2.x - p1.x) + (p2.y - p1.y) * (p2.y - p1.y)); };
 
